// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing loresheet action creators should create a buy option action 1`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {
    "cost": Object {
      "canPay": true,
      "destiny": 0,
      "original": 0,
    },
    "lsUid": "jianghu",
    "payload": undefined,
    "uid": "familiarity",
  },
  "type": "loresheet/BUY_OPTION",
}
`;

exports[`Testing loresheet action creators should create an open action 1`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {
    "cost": Object {
      "canPay": true,
      "destiny": 0,
      "original": 0,
    },
    "uid": "jianghu",
  },
  "type": "loresheet/OPEN",
}
`;
